# lightnroll

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  FrequencyDomain.cpp
app/src/main/python/: Tuner.py
app/src/main/res/color/: tuner_button_background.xml
app/src/main/res/drawable/: back_arrow.xml  bd_icon.xml  birthday_cake_stroke_rounded.xml  birthday_icon.xml  button.xml  c_major_2.xml  c_major_background.xml  down_arrow.xml  empty_input_box.xml  eva_hist_drop.xml  evaluate_icon.xml  home_icon.xml  home_logo.xml  input_box.xml  lesson_button.xml  lesson_icon.xml  lesson_icon1.xml  level_advance.xml  level_basic.xml  level_intermediate.xml  line_vector.xml  logo_level_advance.xml  logo_level_basic.xml  logo_level_intermediate.xml  profile_hist_blue.xml  profile_icon.xml  rectangle.xml  rectangle_1.xml  round_corner.xml  setting_icon.xml  tuning_icon.xml  up_arrow.xml
app/src/main/res/layout/: activity_chord.xml  activity_cppactivity.xml  activity_gptactivity.xml  activity_login.xml  activity_main.xml  activity_results.xml  activity_setting.xml  activity_splash_screen.xml  activity_test_main.xml  activity_tuner.xml  basic_levelmenu.xml  chord_card.xml  chord_cardview.xml  chord_diagram.xml  chord_diagram_2.xml  chord_list.xml  chord_menu.xml  dropdown_evahist.xml  eva_hist_text.xml  eva_play_task.xml  evaluation_menu.xml  evaluation_menu_detail.xml  evaluation_result.xml  evaluation_result_hist.xml  expand_chord_list.xml  (+31 more)
gradle/wrapper/: gradle-wrapper.properties
(+136 files in other folders)
